--- a/frontend/src/components/SnackCard/SnackCard.css
+++ b/frontend/src/components/SnackCard/SnackCard.css
@@ -2,11 +2,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0 100px
+    margin: 0 100px;
 }
 .card-text{
     padding: 20px 30px;
     margin: 30px 0;
+    background-color: rgb(248, 244, 222);
+    border-radius: 10px;
+
 
 }
 .snack-name{
@@ -29,4 +32,8 @@
   
 .review-btn:hover {
     background-color: #0056b3;
+}
+.card-img{
+    width: 60%;
+    height: 60%;
 }
