--- a/frontend/src/components/SnackCard/SnackCard.css
+++ b/frontend/src/components/SnackCard/SnackCard.css
@@ -1,39 +1,73 @@
-.card{
+/* Container for the card */
+.card {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    margin: 0 100px;
-}
-.card-text{
-    padding: 20px 30px;
-    margin: 30px 0;
-    background-color: rgb(248, 244, 222);
     border-radius: 10px;
-
-
+    margin: 20px auto;
+    padding: 20px;
+    max-width: 300px;
+    transition: transform 0.3s;
 }
-.snack-name{
-    font-size: 20px;
+
+/* Card hover effect */
+.card:hover {
+    transform: scale(1.05);
+}
+
+/* Text within the card */
+.card-text {
+    padding: 15px 20px;
+    background-color: white;
+    border-radius: 10px;
+    width: 100%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin-top: 5px;
+}
+
+/* Snack name styling */
+.snack-name {
+    font-size: 22px;
     margin: 10px 0;
+    color: rgb(81, 7, 7);
+    font-weight: bold;
 }
-.snack-rating{
+
+/* Snack rating styling */
+.snack-rating {
     font-size: 18px;
     margin: 10px 0;
+    color: rgb(81, 7, 7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 7px;
+
 }
+
+/* Review button styling */
 .review-btn {
-    background-color: #007bff;
+    background-color: rgb(81, 7, 7);
     color: white;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 4px;
     margin-top: 10px;
-  }
-  
-.review-btn:hover {
-    background-color: #0056b3;
+    transition: background-color 0.3s ease;
 }
-.card-img{
-    width: 60%;
-    height: 60%;
+
+/* Review button hover effect */
+.review-btn:hover {
+    background-color: #5a0a0aa0;
+    font-weight: bold;
+}
+
+/* Image within the card */
+.card-img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
 }
